--- a/localibrary/catalog/templates/index.html
+++ b/localibrary/catalog/templates/index.html
@@ -19,4 +19,6 @@
     <li><strong>Word search:</strong> {{ num_book_word }}</li>
   </ul>
 
+	<p>You have visited this page {{ num_visits }}{% if num_visits == 1 %} time{% else %} times{% endif %}.</p>
+
 {% endblock %}
