--- a/localibrary/catalog/templates/base_generic.html
+++ b/localibrary/catalog/templates/base_generic.html
@@ -42,6 +42,10 @@
       		<ul class="sidebar-nav">
 				<li>Staff</li>
 				<li><a href="{% url 'all-borrowed' %}">All borrowed</a></li>
+				<li>Author</li>
+				<li><a href="{% url 'author_create' %}">Create</a></li>
+				<li>Book</li>
+				<li><a href="{% url 'book_create' %}">Create</a></li>
 			</ul>
 			{% endif %} 	
      
