--- a/localibrary/catalog/templates/catalog/author_list.html
+++ b/localibrary/catalog/templates/catalog/author_list.html
@@ -8,7 +8,7 @@
 
       {% for author in author_list %}
       <li>
-        <a href="{{ author.get_absolute_url }}">{{ author }}</a> ({{author.date_of_birth}})
+        <a href="{{ author.get_absolute_url }}">{{ author }}</a> ({{author.date_of_birth}}) {% if perms.catalog.can_mark_returned %}<a href="{% url 'author_update' author.pk %}">Update</a> <a href="{% url 'author_delete' author.pk %}">Delete</a>{% endif %}
       </li>
       {% endfor %}
 
