--- a/localibrary/catalog/templates/catalog/book_list.html
+++ b/localibrary/catalog/templates/catalog/book_list.html
@@ -8,7 +8,7 @@
 
       {% for book in book_list %}
       <li>
-        <a href="{{ book.get_absolute_url }}">{{ book.title }}</a> ({{book.author}})
+        <a href="{{ book.get_absolute_url }}">{{ book.title }}</a> ({{book.author}}) {% if perms.catalog.can_mark_returned %} <a href="{% url 'book_update' book.pk %}">Update</a> <a href="{% url 'book_delete' book.pk %}">Delete</a>{% endif %}
       </li>
       {% endfor %}
 
